--- a/style.css
+++ b/style.css
@@ -6,11 +6,13 @@ body {
     margin: 0;
     padding: 0;
 }
+
 .swiper-container {
     width: 100%;
     height: 500px;
     margin: 20px auto;
 }
+
 .swiper-slide {
     text-align: center;
     font-size: 18px;
@@ -30,14 +32,24 @@ body {
     -webkit-align-items: center;
     align-items: center;
 }
+
 svg {
     border: solid 1px #ccc;
-    font: 10px sans-serif;
 }
+
+.node rect {
+    fill: #fff;
+    stroke: #000;
+    stroke-width: 2px;
+}
+
+.node text {
+    font: 10px sans-serif;
+    text-transform: capitalize;
+}
+
 .link {
     fill: none;
-    stroke: #ccc;
-    stroke-width: 1.5px;
 }
 
 .svg-container {
@@ -48,23 +60,28 @@ svg {
     vertical-align: top;
     overflow: hidden;
 }
+
 .svg-content-responsive {
     display: inline-block;
     position: absolute;
     top: 10px;
     left: 0;
 }
+
 .arrange-vertically > * {
     display: block;
 }
+
 .row {
   width: 100%;
 }
+
 .block {
   width: 560px; padding: 10px;
   position:relative;
   display: inline-block; // display inline with abality to provide width/height
 }
+
 .bold {
     font-weight : bold;
 }
